--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@capacitor/app": "1.0.2",
+    "@capacitor/core": "3.1.2",
+    "@capacitor/haptics": "1.0.2",
+    "@capacitor/keyboard": "1.0.2",
+    "@capacitor/status-bar": "1.0.2",
     "@ionic/react": "^5.5.0",
     "@ionic/react-router": "^5.5.0",
     "@testing-library/jest-dom": "^5.11.9",
@@ -59,6 +64,7 @@
     ]
   },
   "devDependencies": {
+    "@capacitor/cli": "3.1.2",
     "react-scripts": "4.0.3"
   }
 }
