--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@capacitor/android": "^3.2.0",
     "@capacitor/app": "1.0.2",
-    "@capacitor/core": "3.1.2",
+    "@capacitor/core": "^3.1.2",
     "@capacitor/haptics": "1.0.2",
     "@capacitor/keyboard": "1.0.2",
     "@capacitor/status-bar": "1.0.2",
@@ -64,7 +65,7 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "3.1.2",
+    "@capacitor/cli": "^3.1.2",
     "react-scripts": "4.0.3"
   }
 }
